ecommerce_code/Products service/infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ecom.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
          - path: /api/products/?(.*)
            backend:
              serviceName: product-srv
              servicePort: 4001
          - path: /api/orders/?(.*)
            backend:
              serviceName: order-srv
              servicePort: 4002
          - path: /?(.*)
            backend:
              serviceName: clients-srv
              servicePort: 3000
